--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,17 @@
+#Name and Port
+spring.application.name=StockMicroService
+server.port=8088
+
+# H2
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2
+
+# Datasource
+spring.datasource.username=4TWIN6
+spring.datasource.password=4TWIN6
+spring.datasource.driver-class-namex=org.h2.Driver
+spring.jpa.hibernate.ddl-auto = update
+spring.datasource.url=jdbc:h2:~/test
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
 
