26/11/2023 add eureka client

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,5 +13,7 @@ spring.datasource.driver-class-namex=org.h2.Driver
 spring.jpa.hibernate.ddl-auto = update
 spring.datasource.url=jdbc:h2:~/test
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.client.register-with-eureka=true
 
 
